--- a/html2.html
+++ b/html2.html
@@ -6,7 +6,6 @@
 </head>
 
 <body>
-    <script src="./components/gyro.js"></script>
     <!-- Clock that shows up in top left -->
     <div id="timer">2:15</div>
     <header>
@@ -34,17 +33,26 @@
 </svg>
 
         <!-- Example robot diagram, arm moves when encoder value changes -->
-        <svg id="robot-diagram" width="332" height="450">
+        <svg id="robot-diagram" width="332" height="450" fill="rgba( 0, 150, 136, 1)">
             <text x="40" y="340">Example SVG Robot Diagram</text>
-            <rect x="75" y="360" width="230" height="40"></rect>
-            <rect x="85" y="370" width="210" height="40"></rect>
-            <rect id="robot-arm" x="5" y="375" width="80" height="10"></rect>
-            <circle cx="100" cy="410" r="25"></circle>
-            <circle cx="260" cy="410" r="25"></circle>
+            <rect x="75" y="360" width="230" height="40" fill="rgba( 0, 150, 136, 1)"></rect>
+            <rect x="85" y="370" width="210" height="40" fill="rgba( 0, 150, 136, 1)"></rect>
+            <rect id="robot-arm" x="5" y="375" width="80" height="10" fill="rgba( 0, 150, 136, 1)"></rect>
+            <circle cx="100" cy="410" r="25" fill="rgba( 0, 150, 136, 1)"></circle>
+            <circle cx="260" cy="410" r="25" fill="rgba( 0, 150, 136, 1)"></circle>
             <text id="team" x="185" y="405" text-anchor="middle">####</text><rect x="60" y="380" width="250" height="30"></rect>
             
         </svg>
     </article>
+	<div class="greybox">
+        <div id="login">
+            <input id="connect-address" value="localhost" disabled="" type="text">
+            <button id="connect" disabled="">Connecting</button>
+        </div>
+    </div>
+    <script src="./FRCDashboard-practice/tryIPC.js"></script>
+    <script src="./FRCDashboard-practice/networktables/networktables.js"></script>
+    <script src="./FRCDashboard-practice/ui.js"></script> 
     <!-- The sidebar of the dashboard. Designed for smaller control elements like selection boxes and small buttons. -->
     <aside>
         <!-- Example button which toggles /SmartDashboard/exampleValue NetworkTables value.
@@ -65,53 +73,6 @@
             <input id="arm-position" min="0" max="1200" value="770" type="range">
         </div>
     </aside>
-    <div class="greybox">
-        <div id="login">
-            <input id="connect-address" value="localhost" disabled="" type="text">
-            <button id="connect" disabled="">Connecting</button>
-        </div>
-    </div>
-    <script src="tryIPC.js"></script>
-    <script src="networktables/networktables.js"></script>
-    <script src="ui.js"></script>
-
-
-
-
-<style type="text/css"></style>
-    
-    <!-- The sidebar of the dashboard. Designed for smaller control elements like selection boxes and small buttons. -->
-    <aside>
-        <!-- Example button which toggles /SmartDashboard/exampleValue NetworkTables value.
-            The <p> below then says the value. -->
-        <div id="example-section">
-            <button id="example-button">Change example value</button>
-            <p id="example-readout">Value is undefined</p>
-        </div>
-        <!-- Autonomous selector -->
-        <div class="select-container">
-            <select id="auto-select">
-                <option>No auto modes found</option>
-                <!-- This gets populated by JS -->
-            </select>
-        </div>
-        <div>
-            <p>Adjust arm height</p>
-            <input id="arm-position" min="0" max="1200" value="770" type="range">
-        </div>
-    </aside>
-    <div class="greybox">
-        <div id="login">
-            <input id="connect-address" value="localhost" disabled="" type="text">
-            <button id="connect" disabled="">Connecting</button>
-        </div>
-    </div>
-    <script src="tryIPC.js"></script>
-    <script src="networktables/networktables.js"></script>
-    <script src="ui.js"></script>
-
-
-
-
-<style type="text/css"></style></body><style type="text/css"></style>
-</html>
+    <script src="components/gyro.js"></script>
+</body>
+<style type="text/css"></style> 
