--- a/html2.html
+++ b/html2.html
@@ -42,18 +42,18 @@
             <circle cx="260" cy="410" r="25" fill="rgba( 0, 150, 136, 1)"></circle>
             <text id="team" x="185" y="405" fill="white" text-anchor="middle">3538</text>
 	    <rect x="60" y="380" width="250" height="30"></rect>
-	    <rect x="75" y="55" width="100" height="320"></rect>
+	    <rect x="75" y="60" width="100" height="320"></rect>
         </svg>
     </article>
 	<div class="greybox">
         <div id="login">
-            <input id="connect-address" value="localhost" disabled="" type="text">
+            <input id="connect-address" value="10.85.38.2" disabled="" type="text">
             <button id="connect" disabled="">Connecting</button>
-        </div>
+        </div> 
     </div>
-    <script src="/FRCDashboard-practice/tryIPC.js"></script>
-    <script src="/FRCDashboard-practice/networktables/networktables.js"></script>
-    <script src="/FRCDashboard-practice/ui.js"></script> 
+    <script src="tryIPC.js"></script>
+    <script src="networktables/networktables.js"></script>
+    <script src="components/ui.js"></script> 
     <!-- The sidebar of the dashboard. Designed for smaller control elements like selection boxes and small buttons. -->
     <aside>
         <!-- Example button which toggles /SmartDashboard/exampleValue NetworkTables value.
